--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-  "fastapi>=0.115.8",
-  "numpy>=2.2.2",
-  "psycopg2-binary>=2.9.10",
-  "pydantic>=2.10.6",
-  "python-dotenv>=1.0.1",
-  "redis>=5.2.1",
-  "sentence-transformers>=3.4.1",
-  "sqlalchemy>=2.0.38",
-  "uvicorn>=0.34.0",
+    "fastapi>=0.115.12",
+    "psycopg2>=2.9.10",
+    "psycopg2-binary>=2.9.10",
+    "sqlalchemy>=2.0.41",
+    "uvicorn>=0.34.3",
 ]
