--- a/requirements-backup.txt
+++ b/requirements-backup.txt
@@ -37,6 +37,7 @@ pydantic==2.10.6
 pydantic-core==2.27.2
 python-dotenv==1.0.1
 pyyaml==6.0.2
+redis==5.2.1
 regex==2024.11.6
 requests==2.32.3
 safetensors==0.5.2
