--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,46 @@
 annotated-types==0.7.0
-annoy==1.17.3
-anyio==4.8.0
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
-fastapi==0.115.8
-filelock==3.17.0
-fsspec==2025.2.0
-greenlet==3.1.1
-h11==0.14.0
-huggingface-hub==0.28.1
+anyio==4.9.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.1
+fastapi==0.115.12
+filelock==3.13.1
+fsspec==2024.6.1
+greenlet==3.2.3
+h11==0.16.0
+hf-xet==1.1.3
+huggingface-hub==0.33.0
 idna==3.10
-jinja2==3.1.5
-joblib==1.4.2
-markupsafe==3.0.2
+jinja2==3.1.4
+joblib==1.5.1
+markupsafe==2.1.5
 mpmath==1.3.0
-networkx==3.4.2
-numpy==2.2.3
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-cusparselt-cu12==0.6.2
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
-packaging==24.2
-pillow==11.1.0
+networkx==3.3
+numpy==2.3.0
+packaging==25.0
+pillow==11.2.1
+psycopg2==2.9.10
 psycopg2-binary==2.9.10
-pydantic==2.10.6
-pydantic-core==2.27.2
-python-dotenv==1.0.1
+pydantic==2.11.7
+pydantic-core==2.33.2
 pyyaml==6.0.2
 regex==2024.11.6
-requests==2.32.3
-safetensors==0.5.2
-scikit-learn==1.6.1
-scipy==1.15.1
-sentence-transformers==3.4.1
-setuptools==75.8.0
+requests==2.32.4
+safetensors==0.5.3
+scikit-learn==1.7.0
+scipy==1.15.3
+sentence-transformers==4.1.0
+setuptools==70.2.0
 sniffio==1.3.1
-sqlalchemy==2.0.38
-starlette==0.45.3
-sympy==1.13.1
-threadpoolctl==3.5.0
-tokenizers==0.21.0
-torch==2.6.0
+sqlalchemy==2.0.41
+starlette==0.46.2
+sympy==1.13.3
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+torch==2.7.1+cpu
 tqdm==4.67.1
-transformers==4.48.3
-triton==3.2.0
-typing-extensions==4.12.2
-urllib3==2.3.0
-uvicorn==0.34.0
+transformers==4.52.4
+typing-extensions==4.14.0
+typing-inspection==0.4.1
+urllib3==2.4.0
+uvicorn==0.34.3
