--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,35 @@
 annotated-types==0.7.0
+annoy==1.17.3
 anyio==4.9.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.2.1
 fastapi==0.115.12
-filelock==3.13.1
-fsspec==2024.6.1
+filelock==3.18.0
+fsspec==2025.5.1
 greenlet==3.2.3
 h11==0.16.0
 hf-xet==1.1.3
 huggingface-hub==0.33.0
 idna==3.10
-jinja2==3.1.4
+jinja2==3.1.6
 joblib==1.5.1
-markupsafe==2.1.5
+markupsafe==3.0.2
 mpmath==1.3.0
-networkx==3.3
+networkx==3.5
 numpy==2.3.0
 packaging==25.0
 pillow==11.2.1
-psycopg2==2.9.10
 psycopg2-binary==2.9.10
 pydantic==2.11.7
 pydantic-core==2.33.2
+python-dotenv==1.1.0
 pyyaml==6.0.2
 regex==2024.11.6
 requests==2.32.4
 safetensors==0.5.3
 scikit-learn==1.7.0
 scipy==1.15.3
-sentence-transformers==4.1.0
 setuptools==70.2.0
 sniffio==1.3.1
 sqlalchemy==2.0.41
@@ -37,7 +37,6 @@ starlette==0.46.2
 sympy==1.13.3
 threadpoolctl==3.6.0
 tokenizers==0.21.1
-torch==2.7.1+cpu
 tqdm==4.67.1
 transformers==4.52.4
 typing-extensions==4.14.0
