--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
   "psycopg2>=2.9.10",
   "psycopg2-binary>=2.9.10",
   "python-dotenv>=1.1.0",
+  "sentence-transformers>=4.1.0",
   "sqlalchemy>=2.0.41",
   "uvicorn>=0.34.3",
 ]
